<resources>
    <string name="app_name">Delve</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="FAQ">FAQ</string>
    <string name="Settings">Settings</string>
    <string name="Profile">Profile</string>
    <string name="Doctor">Doctor</string>
    <string name="VersionNumber">Version 2.3.31.24</string>
    <string name="About">About</string>
    <string name="Q_what_is">What is melanoma?</string>
    <string name="Q_worried">Should I be worried if I find a mole?</string>
    <string name="Citation">Works Cited</string>
    <string name="citations" translatable="false">"American Academy of Dermatology. (n.d.). Melanoma FAQs. Retrieved October 7, 2017, from https://www.aad.org/media/stats/conditions/melanoma-faqs Mayo Clinic. (n.d.). Melanoma. Retrieved October 7, 2017, from http://www.mayoclinic.org/diseases-conditions/melanoma/basics/definition/con-20026009 "</string>
    <string name="A_whatis">Melanoma is the most severe form of skin cancer, where skin cells called melanocytes become cancerous and grow uncontrollably.</string>
    <string name="A_worried">While melanoma can be deadly, it is preventable if you take caution to avoid damaging sun rays and apply sunscreen when outside for a long time. Additionally, the five year survival rate for patients who were diagnosed with melanona early is 98%.</string>
    <string name="JohnDoe">John Doe</string>
    <string name="Hospital">Care Provider: Tang Center</string>
    <string name="language">Language</string>
</resources>
